# PARA-notes-AI-assistant

./: .gitignore  README.md  config.example.yml  pyproject.toml
Assistant/: metadata.vocab.yml
obsassist/: __init__.py  chunker.py  cli.py  config.py  diff.py  embeddings.py  filters.py  indexer.py  metadata_guard.py  ollama_client.py  parser.py  prompts.py  retrieval.py  search.py  tag_scanner.py
tests/: test_ask_cmd.py  test_chunker.py  test_diff.py  test_embeddings.py  test_filters.py  test_indexer.py  test_metadata_apply_cmd.py  test_metadata_guard.py  test_parser.py  test_retrieval.py  test_search.py  test_tag_scanner.py
